# glut-fato

./: .gitignore  Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  fato-array-fragment.glsl  fato-array-vertex.glsl  fato-ffs-fragment.glsl  fato-ffs-vertex.glsl  fato-ffs.c  fato-mipmap-fb.c  fato-pbo.c  fato-texture-array.c  fato-triangle.c  fato-util.c  fato-util.h
